# RiV-mesh-builds

./: .gitmodules  README.md  build  go.mod  go.sum
.github/workflows/: pkg.yml
contrib/deb/: generate-gui.sh  generate-vpn-gui.sh  generate-vpn.sh  generate.sh
contrib/docker/: Dockerfile
contrib/macos/: create-pkg-gui.sh  create-pkg.sh  create-vpn-pkg-gui.sh
contrib/mobile/: mobile.go  mobile_test.go
contrib/msi/: build-msi-gui.sh  build-msi-ie.sh  build-msi.sh  build-vpn-msi-gui.sh  build-vpn-msi-ie.sh  build-vpn-msi.sh
contrib/nas/: nas-asustor.sh  nas-drobo.sh  nas-netgear-os6.sh  nas-qnap.sh  nas-synology-dsm6.0.sh  nas-synology-dsm7.0.sh  nas-terramaster.sh  nas-westerndigital-os3.sh  nas-westerndigital-os5.sh
contrib/ui/mesh-ui/: webview.go  webview_windows.go
contrib/ui/mesh-ui/desktop/: README.md
contrib/ui/mesh-ui/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
contrib/ui/mesh-ui/desktop/src-tauri/src/: lib.rs  main.rs
contrib/ui/mesh-ui/ui/: index.html
contrib/ui/mesh-ui/ui/assets/: bulmaswatch.min.css  mesh-ui-es5.js  mesh-ui.css  mesh-ui.js  polyfills.js  properties.js
contrib/ui/nas-asustor/www/assets/: properties.js
contrib/ui/nas-qnap/au/: apache-mesh.conf
contrib/ui/nas-qnap/package/: package_routines
contrib/ui/nas-qnap/package/shared/: mesh.sh
contrib/ui/nas-synology-dsm6.0/spk/conf/: resource
contrib/ui/nas-synology-dsm7.0/spk/conf/: privilege
contrib/ui/nas-synology-dsm7.0/spk/scripts/: postinst  start
contrib/ui/nas-westerndigital/package/mesh/: apache-mesh.conf  clean.sh  install.sh  start.sh
(+7 files in other folders)
